--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "serve": "browser-sync start --server public --files public --port 1337",
     "start": "npm-run-all copy:* scss --parallel watch serve",
     "build": "npm-run-all copy:* scss css",
-    "lint": "stylelint src/sass/**/*.scss src/sass/**/**/*.scss src/sass/**/**/**/*.scss -f verbose --color",
-    "lint:fix": "stylelint src/sass/**/*.scss src/sass/**/**/*.scss src/sass/**/**/**/*.scss --fix -f verbose --color",
+    "lint": "stylelint src/sass/**/*.scss src/sass/**/**/*.scss src/sass/**/**/**/*.scss -f verbose --color  || echo 'lint failed for some file(s).'",
+    "lint:fix": "stylelint src/sass/**/*.scss src/sass/**/**/*.scss src/sass/**/**/**/*.scss --fix -f verbose --color || echo 'lint failed for some file(s).'",
     "stylelint-check": "stylelint-config-prettier-check"
   },
   "browserslist": [
@@ -50,6 +50,9 @@
     "sass": "^1.37.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-sass-guidelines": "^8.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.20.1",
+    "stylelint-selector-bem-pattern": "^2.1.1"
   }
 }
