--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "build": "npm-run-all copy:* scss css",
     "lint": "stylelint src/assets/sass/**/*.scss src/assets/sass/**/**/*.scss src/assets/sass/**/**/**/*.scss -f verbose --color  || echo 'lint failed for some file(s).'",
     "lint:fix": "stylelint src/assets/sass/**/*.scss src/assets/sass/**/**/*.scss src/assets/sass/**/**/**/*.scss --fix -f verbose --color || echo 'lint failed for some file(s).'",
-    "stylelint-check": "stylelint-config-prettier-check"
+    "stylelint-check": "stylelint-config-prettier-check",
+    "test": "standard && node 'src/js/**/*.js' -f verbose --color  || echo 'standard failed for some file(s).'",
+    "test:fix": "standard --fix && node 'src/js/**/*.js' -f verbose --color  || echo 'standard failed for some file(s).'"
   },
   "browserslist": [
     "last 4 versions"
@@ -39,14 +41,13 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "prettier": "2.3.2",
     "sass": "^1.37.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
