--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Edge",
+      "request": "launch",
+      "type": "pwa-msedge",
+      "url": "http://localhost:1337/",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
       "type": "pwa-chrome",
       "request": "launch",
       "name": "launch my cool app",
       "url": "http://localhost:1337/"
+    },
+    {
+      "name": "Launch Microsoft Edge and open the Edge DevTools",
+      "request": "launch",
+      "type": "vscode-edge-devtools.debug",
+      "url": "http://localhost:1337/" // Provide your project's url to finish configuring
     }
   ]
 }
