--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "scss": "sass src/assets/sass:public/assets/css",
     "css": "postcss public/assets/css/*.css -u autoprefixer cssnano -r -m",
     "copy:html": "copyfiles -u 1 ./src/*.html ./src/**/*.html public",
-    "copy:js": "copyfiles -u 1 ./src/assets/js/*.js public",
+    "copy:js": "copyfiles -u 1 ./src/assets/js/**/*.js public",
     "watch:html": "onchange src/*.html src/**/*.html -- npm run copy:html",
     "watch:sass": "sass --watch src/assets/sass:public/assets/css",
-    "watch:js": "onchange src/assets/js/*.js -- npm run copy:js",
+    "watch:js": "onchange src/assets/js/**/*.js -- npm run copy:js",
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public --port 1337",
     "start": "npm-run-all copy:* scss --parallel watch serve",
