--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -3,7 +3,7 @@ name: Deploy to Github Pages
 on:
   push:
     branches:
-      - main  # Set a branch name to trigger deployment
+      - spa-router # Set a branch name to trigger deployment
 
 jobs:
   deploy:
